css/main.css
@import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');



/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
  License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding: 0; }

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block; }

body {
  line-height: 1; }

ol, ul {
  list-style: none; }

blockquote, q {
  quotes: none; }

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

html,
body {
  margin: 0;
  padding: 0;
  font-family: 'Source Sans Pro', Helvetica, sans-serif;
  height: 100%; /* needed for container min-height */
}

header{
  min-height: 6rem;
}

h1, h2{
  font-family: 'Playfair Display';
}

h2{
  font-size: 1.25rem;
}

h1{
  font-size: 1.75rem;
}

.logo-img{
  width: 5em;
  height: 5em;
  border-radius: 50%;
  margin-right: .5em;
}

#nav-bar{
  display: flex;
  justify-content: flex-end;
  align-items: center;
  top:0;
  width: 100%;
  position: fixed;
  background-color: #ABA6BF;
  min-height: 6em; 
}

.logo{
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-right: auto;
  padding-left: 1.5rem;
}

.links{
  align-items: center;
  padding-right: 2rem;
  font-size: 1.1rem;
}

@media (min-width:480px){
  .links{
    padding-right: 1rem;
  }
}
.links * {
  margin-right: .75em; 
  text-decoration: none;
}

.links a:link{
  color: black;
}
.links a:visited{
  color: black;
}

.content{
  text-align: center;
  background-color: #F1E0D6;
}

#form{
  margin: auto;
  padding: 3em; 
  text-align: center;
  padding-bottom: 2em;
}

#form * {
  margin-bottom: 1rem;
}

#email{
  width: 20em;
  color: gray;
  height: 1.1rem;
  padding-left: .3rem;
}
.button{
  background-color: #583E2E;
  font-size: .9rem;
  display: block;
  width: 6rem;
  height: 1.75rem;
  margin:0 auto;
  border-radius: 5px;
  color: white;
}

#copy{
  padding-bottom: 2rem; 
  text-align: left;
}

.fas{
  display: inline-block;
  padding-left: 2em;
  padding-right: 1.25em;
  color: #595775;
}

.fa-shipping-fast{
  padding-left: 1.75em;
  padding-right: 1.15em;
}

.segment{
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-right: 5em;
  padding-bottom: 2.25rem;
}

.segment h1{
  padding-bottom: .5rem;
}

#purchase{
  display: flex;
  justify-content: flex-start;
  margin-top: 4rem;
  margin-left: 1.5rem;
  margin-right: 1.5rem;
  padding-bottom: 7rem;
}

.purchase-option{
  width: 30%;
  border: 1px solid black;
  margin-right: 1.5rem;
  padding-bottom: 2rem;
}

.purchase-option .button{
  margin-top: 1rem;
}

.purchase-option h3{
  font-size: 1.5rem;
  background-color: #ABA6BF;
  padding: .3rem;
  margin-bottom: 1rem;
}

.purchase-option p{
  padding-left: 2rem;
  padding-right: 2rem;
  padding-bottom: .5rem;
}

